@@ -97,6 +97,7 @@ static CSandbergUI::texture_file __attribute__((aligned(16))) texture_list[] =
 	{CSandbergUI::TEX_LOAD,		GU_PSM_8888,  32, 32, "load.raw"},
 	{CSandbergUI::TEX_SOUND,	GU_PSM_8888,  32, 32, "sound.raw"},
 	{CSandbergUI::TEX_OPTIONS,	GU_PSM_8888, 128, 64, "options.raw"},
+	{CSandbergUI::TEX_PARTICLE_01,	GU_PSM_8888,  16, 16, "particle_01.raw"},
 	};
 
 #define	TEXTURE_COUNT		(sizeof(texture_list) / sizeof(CSandbergUI::texture_file))
