@@ -3,6 +3,7 @@ What's New for PSPRadio
 0.36-pre5
 (raf) Lots of cleanup / refactoring
 (raf) Now downloads a compressed version of SHOUTcast.com's database instead.
+(sandberg) Added a particle system as a new background effect for the 3D UI.
 
 0.36-pre4 (r427)
 (raf) Enabled the CPU speed change option.
